--- a/openag_pio/platformio.ini
+++ b/openag_pio/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = 
+    https://github.com/GyverLibs/GyverOLED.git
+    https://github.com/adafruit/Adafruit_SGP30.git
+    https://github.com/adafruit/Adafruit_SHT4X.git
