custom flag for c++17

--- a/openag_pio/platformio.ini
+++ b/openag_pio/platformio.ini
@@ -10,9 +10,12 @@
 
 [env:esp32dev]
 platform = espressif32
+build_flags = -std=c++17
 board = esp32dev
 framework = arduino
+lib_ldf_mode=deep
 lib_deps = 
     https://github.com/GyverLibs/GyverOLED.git
     https://github.com/adafruit/Adafruit_SGP30.git
     https://github.com/adafruit/Adafruit_SHT4X.git
+    https://github.com/me-no-dev/ESPAsyncWebServer.git
